Refine demodulation methods description in HTML
Updated the description of the demodulation methods used for BPSK and FSK.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <h1>Digital Communication Virtual Lab</h1>
-    <p>Shows: Input (baseband), Carrier, Modulated, Demodulated signals</p>
+    <p>Shows: Input (baseband), Carrier, Modulated, Demodulated (BPSK & FSK)</p>
   </header>
 
   <div class="container">
@@ -32,7 +32,7 @@
       </div>
 
       <div class="notes">
-        <p class="small">Demodulation uses simple coherent method for BPSK and energy-detection for FSK over each bit interval.</p>
+        <p class="small">Demodulation: coherent for BPSK (assumes phase-aligned LO), energy/correlation for FSK.</p>
       </div>
     </aside>
 
